# rust-abs-file-macro

./: Cargo.toml  README.md
.github/workflows/: rust-tests.yml
src/: lib.rs
test-workspace-1/: Cargo.toml  README.md
test-workspace-1/tests/: abs_file_tests_workspace_1.rs
tests/: abs_file_tests.rs
