[package]
name = "abs-file-macro"
version = "0.1.1"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
edition = "2021"
description = "A macro that returns the absolute file path of the Rust source file in which it is invoked."
repository = "https://github.com/jzombie/rust-abs-file-macro"
license = "MIT"

[dependencies]

[workspace]
members = [
    ".",
    "test-workspace-1"
]
resolver = "2"

[dev-dependencies]
doc-comment = "0.3.3"
